[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/sprites/Monsters_Creatures_Fantasy/Flying eye/Attack.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/Monsters_Creatures_Fantasy/Flying eye/Take Hit.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Monsters_Creatures_Fantasy/Flying eye/Flight.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Monsters_Creatures_Fantasy/Flying eye/Death.png" type="Texture" id=4]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Flying Eye.gd" type="Script" id=6]
[ext_resource path="res://scenes/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/SoftCollision.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "takehit",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "flight",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ) ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
radius = 13.0
height = 12.0

[sub_resource type="CircleShape2D" id=27]
radius = 15.0

[sub_resource type="CircleShape2D" id=28]
radius = 160.0

[sub_resource type="CapsuleShape2D" id=29]
height = 0.0

[sub_resource type="CircleShape2D" id=30]
radius = 12.0

[node name="Flying Eye" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 6 )
ACCELERATION = 100
MAX_SPEED = 200

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 25 )
animation = "flight"
frame = 2
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 1 )
rotation = 1.5708
shape = SubResource( 26 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0, 1, 0.27451, 1 )
position = Vector2( 4, 1 )
shape = SubResource( 27 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.329412 )
shape = SubResource( 28 )

[node name="Hitbox" parent="." instance=ExtResource( 9 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.72549, 0.0627451, 0.0627451, 1 )
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 29 )

[node name="SoftCollision" parent="." instance=ExtResource( 10 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 30 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
